@startuml MLD_ByInes

title MLD - Modèle Logique de Données\nPlateforme E-Commerce byines

skinparam {
    BackgroundColor #FFFDF9
    RoundCorner 10
    ArrowColor #5B4F43
    EntityBackgroundColor #F6F4F0
    EntityBorderColor #5B4F43
    EntityFontColor #1A1A1A
    EntityHeaderBackgroundColor #D2C3B4
}

entity "users" as users {
    **id** : INT <<PK, AUTO_INCREMENT>>
    --
    first_name : VARCHAR(50)
    last_name : VARCHAR(50)
    email : VARCHAR(100) <<UNIQUE>>
    password_hash : VARCHAR(255)
    role : ENUM('user', 'admin')
}

entity "categories" as categories {
    **id** : INT <<PK, AUTO_INCREMENT>>
    --
    name : VARCHAR(100)
    slug : VARCHAR(100) <<UNIQUE>>
}

entity "collections" as collections {
    **id** : INT <<PK, AUTO_INCREMENT>>
    --
    title : VARCHAR(150)
    products_ids : VARCHAR(255)
}

entity "products" as products {
    **id** : INT <<PK, AUTO_INCREMENT>>
    --
    category_id : INT <<FK>>
    name : VARCHAR(150)
    sku : VARCHAR(50) <<UNIQUE>>
    price : DECIMAL(10,2)
    is_active : TINYINT(1)
}

entity "product_variants" as variants {
    **id** : INT <<PK, AUTO_INCREMENT>>
    --
    product_id : INT <<FK>>
    color : VARCHAR(30)
    size : VARCHAR(10)
    stock_quantity : INT
}

entity "product_images" as images {
    **id** : INT <<PK, AUTO_INCREMENT>>
    --
    product_id : INT <<FK>>
    image_name : VARCHAR(100)
    is_main : TINYINT(1)
}

entity "addresses" as addresses {
    **id** : INT <<PK, AUTO_INCREMENT>>
    --
    user_id : INT <<FK>>
    address_line1 : VARCHAR(255)
    city : VARCHAR(100)
    country : VARCHAR(50)
}

entity "orders" as orders {
    **id** : INT <<PK, AUTO_INCREMENT>>
    --
    user_id : INT <<FK, NULL>>
    order_number : VARCHAR(30) <<UNIQUE>>
    total_amount : DECIMAL(10,2)
    status : ENUM('pending', 'completed', 'canceled')
}

entity "order_items" as order_items {
    **id** : INT <<PK, AUTO_INCREMENT>>
    --
    order_id : INT <<FK>>
    variant_id : INT <<FK>>
    quantity : INT
    price : DECIMAL(10,2)
}

entity "reviews" as reviews {
    **id** : INT <<PK, AUTO_INCREMENT>>
    --
    user_id : INT <<FK>>
    product_id : INT <<FK>>
    rating : TINYINT
    review_text : TEXT
}

entity "wishlist" as wishlist {
    **id** : INT <<PK, AUTO_INCREMENT>>
    --
    user_id : INT <<FK>>
    product_id : INT <<FK>>
}

categories ||--o{ products : "category_id"
products ||--|{ variants : "product_id"
products ||--o{ images : "product_id"
users ||--o{ addresses : "user_id"
users ||--o{ orders : "user_id"
users ||--o{ reviews : "user_id"
products ||--o{ reviews : "product_id"
users ||--o{ wishlist : "user_id"
products ||--o{ wishlist : "product_id"
orders ||--|{ order_items : "order_id"
variants ||--o{ order_items : "variant_id"

@enduml
